--- a/src/Components/NavBars/NavBar.css
+++ b/src/Components/NavBars/NavBar.css
@@ -1,4 +1,9 @@
 .items{ 
-    color: #000000; 
+    /* color: #000000 !important;  */
     
+}
+
+.fsd8a9a{ 
+    white-space: nowrap !important;
+    background-color: transparent !important;
 }
