changed the color of nav on home

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -17,3 +17,9 @@
 .c3{ 
     background-image: url("img/jan-sendereks.jpg");
 }
+
+.pointercolor{ 
+    color: #52cace !important ; 
+    background-color: #52cace !important;
+}
+
