--- a/src/assets/css/paper-kit.css
+++ b/src/assets/css/paper-kit.css
@@ -9600,7 +9600,8 @@ body {
     display: inline-block;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    width: 100%; }
+    width: 100%; 
+    }
     #cd-vertical-nav a span {
       float: right;
       display: inline-block;
@@ -9622,7 +9623,7 @@ body {
       -o-transform: scale(1);
       transform: scale(1); }
     #cd-vertical-nav a.is-selected .cd-dot {
-      background-color: #51cbce;
+      background-color: #538686;
       -webkit-transform: scale(1);
       -moz-transform: scale(1);
       -ms-transform: scale(1);
@@ -9639,7 +9640,7 @@ body {
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #f5593d;
+    background-color: #52cace ;
     -webkit-transition: -webkit-transform 0.2s, background-color 0.5s;
     -moz-transition: -moz-transform 0.2s, background-color 0.5s;
     transition: transform 0.2s, background-color 0.5s;
@@ -9647,7 +9648,10 @@ body {
     -moz-transform-origin: 50% 50%;
     -ms-transform-origin: 50% 50%;
     -o-transform-origin: 50% 50%;
-    transform-origin: 50% 50%; }
+    transform-origin: 50% 50%; 
+    background-color: #52cace !important;
+    
+  }
   #cd-vertical-nav .cd-label {
     position: relative;
     margin-right: 10px;
