--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -20,3 +20,20 @@
     background-color: #52cace !important;
 }
 
+.my-element {
+    display: inline-block;
+    margin: 0 0.5rem;
+  
+    animation: bounce; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s; /* don't forget to set a duration! */
+  }
+
+  .ppbgf{ 
+      background-image: url("./img/Photos12.png") !important;
+  }
+
+  .important{ 
+      background-color: transparent;
+  }
+
+  
