--- a/src/Components/Footers/Footer.css
+++ b/src/Components/Footers/Footer.css
@@ -1,14 +1,14 @@
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white !important;
+    color: black !important;
     text-align: center;
     opacity: 1; /* Firefox */
     font:auto; 
   }
 
   .form-bord{ 
-    border: 1px solid #ccc !important;
-    border-radius: 20px;
-    margin: 3px;
+    border: 1px solid #000 !important;
+  
+
   } 
 
 .dasds8{ 
