--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -7,7 +7,7 @@
     background-image: url("./sample.png");
 }
 .adjust{ 
-    color:"#ffffff" ; 
+    color:"#333" ; 
 }
 
 .videobground{ 
@@ -20,7 +20,7 @@
 
 .reddy{ 
     
-    background-color: #000000 !important;
+    background-color: #333 !important;
     
 }
 
