--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -36,4 +36,19 @@
       background-color: transparent;
   }
 
-  
+  @media(max-width:700px){ 
+    .fixp{
+        font-size: 15px !important ; 
+
+    }
+    .fixh3{ 
+        font-size: 20px !important;
+    }
+    .fill{ 
+        width:100% !important;
+    }
+}
+
+.fill { 
+    width:100% !important;
+}
