--- a/src/Components/NavBars/NavBar.css
+++ b/src/Components/NavBars/NavBar.css
@@ -19,5 +19,12 @@
 }
 
 
+.fixnavbar{ 
+    position: static!important;
+    top:50% !important; 
+    vertical-align: center !important;
+    justify-content: center !important;
+}
+
 
     
