fixed up the photo error. praise

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -62,14 +62,16 @@
     background-color: #333;   
 }
 
-.photo1{ 
-    background-image: url("./img/Photos3.png") !important;
-}
 .photo2{ 
-    background-image: url("./img/Photos13.png") !important;
+    background-image: url("./img/Photos21.png") !important;
+    background-position: center right;
 }
 .photo3{ 
-    background-image: url("./img/Photos1.png") !important;
+    background-image: url("./img/Photos221.png") !important;
+    background-position: left center ; 
+    background-attachment: fixed !important;
+    background-size: cover !important; /* Resize the background image to cover the entire container */
+    
 }
 
 .menubg{ 
@@ -78,4 +80,15 @@
 
 .textc{ 
     color:#fff !important; 
+}
+
+.photo1 { 
+    background-image: url("./img/Photos3.png");
+    background-position: center right;
+
+
+}
+
+.img{ 
+    display: initial;
 }
