--- a/src/assets/css/paper-kit.css
+++ b/src/assets/css/paper-kit.css
@@ -22,7 +22,7 @@
  * Copyright 2012-2013 Mattia Larentis
  * http://www.apache.org/licenses/LICENSE-2.0
  */
- .bootstrap-switch {
+.bootstrap-switch {
   display: inline-block;
   direction: ltr;
   cursor: pointer;
@@ -8714,7 +8714,7 @@ a.pswp__share--download:hover {
   z-index: 2; }
 
 #register-navbar a {
-  color: #000000; }
+  color: #FFF; }
 
 .register-footer {
   bottom: 20px;
@@ -8858,7 +8858,6 @@ a.pswp__share--download:hover {
     color: #FFFFFF; }
 
 .contact-page .section:first-of-type, .discover .section:first-of-type, .search-page .section:first-of-type {
-  background-color: black !important;
   padding-top: 100px; }
 
 .profile-background {
@@ -9015,7 +9014,6 @@ a.pswp__share--download:hover {
       margin-top: 10px; }
 
 .contact-page .navbar {
-  background-color: #000;
   margin-bottom: 0px; }
 
 .contact-page .title {
@@ -9373,9 +9371,6 @@ body {
   .background-img .error-msg {
     text-align: center; }
 
-
-
-
 .section {
   padding: 70px 0;
   position: relative;
@@ -9600,8 +9595,7 @@ body {
     display: inline-block;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    width: 100%; 
-    }
+    width: 100%; }
     #cd-vertical-nav a span {
       float: right;
       display: inline-block;
@@ -9623,7 +9617,7 @@ body {
       -o-transform: scale(1);
       transform: scale(1); }
     #cd-vertical-nav a.is-selected .cd-dot {
-      background-color: #538686;
+      background-color: #51cbce;
       -webkit-transform: scale(1);
       -moz-transform: scale(1);
       -ms-transform: scale(1);
@@ -9640,7 +9634,7 @@ body {
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    background-color: #52cace ;
+    background-color: #f5593d;
     -webkit-transition: -webkit-transform 0.2s, background-color 0.5s;
     -moz-transition: -moz-transform 0.2s, background-color 0.5s;
     transition: transform 0.2s, background-color 0.5s;
@@ -9648,10 +9642,7 @@ body {
     -moz-transform-origin: 50% 50%;
     -ms-transform-origin: 50% 50%;
     -o-transform-origin: 50% 50%;
-    transform-origin: 50% 50%; 
-    background-color: #52cace !important;
-    
-  }
+    transform-origin: 50% 50%; }
   #cd-vertical-nav .cd-label {
     position: relative;
     margin-right: 10px;
