--- a/src/assets/demo/demo.css
+++ b/src/assets/demo/demo.css
@@ -6,7 +6,7 @@
  * Copyright (c) 2018 Daniel Eden
  */
 
- .animated {
+.animated {
   animation-duration: 1s;
   animation-fill-mode: both;
 }
@@ -1607,6 +1607,7 @@
 .parallax {
   width: 100%;
   height: 570px;
+  display: block;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
