--- a/src/Components/NavBars/NavBar.css
+++ b/src/Components/NavBars/NavBar.css
@@ -25,3 +25,7 @@
     vertical-align: center !important;
     justify-content: center !important;
 }
+
+.fixProgress {
+    z-index: 9999999 !important;
+}
