--- a/src/assets/scss/paper-kit/_animated-buttons.scss
+++ b/src/assets/scss/paper-kit/_animated-buttons.scss
@@ -1,7 +1,10 @@
 //animations
 
 .icon-property {
-    @include transition($slow-transition-time, $transition-bezier);
+    @include transition(
+        $slow-transition-time,
+        $transition-bezier
+    );
     position: relative;
     display: inline-block;
 }
