--- a/src/assets/scss/react/paper-kit/_responsive.scss
+++ b/src/assets/scss/react/paper-kit/_responsive.scss
@@ -69,7 +69,9 @@
     .navbar .navbar-nav .dropdown-menu .dropdown-menu {
         max-height: unset !important;
     }
-    .dropdown .dropdown-menu .dropdown-toggle.dropdown-item {
+    .dropdown
+        .dropdown-menu
+        .dropdown-toggle.dropdown-item {
         pointer-events: none;
     }
 }
