--- a/src/assets/scss/paper-kit/_cards.scss
+++ b/src/assets/scss/paper-kit/_cards.scss
@@ -8,15 +8,20 @@
     z-index: 1;
     border: 0 none;
 
-    -webkit-transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+    -webkit-transition: transform 300ms
+            cubic-bezier(0.34, 2, 0.6, 1),
         box-shadow 200ms ease;
-    -moz-transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+    -moz-transition: transform 300ms
+            cubic-bezier(0.34, 2, 0.6, 1),
         box-shadow 200ms ease;
-    -o-transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+    -o-transition: transform 300ms
+            cubic-bezier(0.34, 2, 0.6, 1),
         box-shadow 200ms ease;
-    -ms-transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+    -ms-transition: transform 300ms
+            cubic-bezier(0.34, 2, 0.6, 1),
         box-shadow 200ms ease;
-    transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+    transition: transform 300ms
+            cubic-bezier(0.34, 2, 0.6, 1),
         box-shadow 200ms ease;
 
     &:not(.card-plain):hover {
@@ -55,7 +60,8 @@
     img {
         max-width: 100%;
         height: auto;
-        border-radius: $border-radius-extreme $border-radius-extreme 0 0;
+        border-radius: $border-radius-extreme
+            $border-radius-extreme 0 0;
     }
 
     &[data-radius="none"] {
