--- a/src/assets/scss/paper-kit/_collapse.scss
+++ b/src/assets/scss/paper-kit/_collapse.scss
@@ -51,6 +51,9 @@
         -webkit-transform: rotate(180deg);
         -ms-transform: rotate(180deg);
         transform: rotate(180deg);
-        @include transition($slow-transition-time, $transition-linear);
+        @include transition(
+            $slow-transition-time,
+            $transition-linear
+        );
     }
 }
