--- a/src/assets/scss/paper-kit/_dropdown-extend.scss
+++ b/src/assets/scss/paper-kit/_dropdown-extend.scss
@@ -3,7 +3,8 @@
 .bootstrap-select {
     > .dropdown-menu:first-of-type {
         display: block;
-        transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0s,
+        transition: all 0.3s
+                cubic-bezier(0.215, 0.61, 0.355, 1) 0s,
             opacity 0.3s ease 0s, height 0s linear 0.35s;
     }
     .dropdown-menu {
@@ -52,7 +53,8 @@
     .dropdown-header {
         color: $dark-gray;
         font-size: $font-size-small;
-        padding: $padding-dropdown-vertical $padding-dropdown-horizontal;
+        padding: $padding-dropdown-vertical
+            $padding-dropdown-horizontal;
     }
 
     .no-notification {
@@ -211,13 +213,15 @@
     top: -10px;
 }
 
-.dropdown .dropdown-menu.dropdown-notification[x-placement="top-start"]:before,
+.dropdown
+    .dropdown-menu.dropdown-notification[x-placement="top-start"]:before,
 .dropdown
     .dropdown-menu.dropdown-notification[x-placement="bottom-start"]:before {
     left: 30px !important;
     right: auto;
 }
-.dropdown .dropdown-menu.dropdown-notification[x-placement="top-start"]:after,
+.dropdown
+    .dropdown-menu.dropdown-notification[x-placement="top-start"]:after,
 .dropdown
     .dropdown-menu.dropdown-notification[x-placement="bottom-start"]:after {
     left: 30px !important;
@@ -240,7 +244,8 @@
     .dropdown .dropdown-menu,
     .dropdown-btn .dropdown-menu {
         transform: translate3d(0px, -40px, 0px);
-        transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0s,
+        transition: all 0.3s
+                cubic-bezier(0.215, 0.61, 0.355, 1) 0s,
             opacity 0.3s ease 0s, height 0s linear 0.35s;
     }
     .navbar-nav .dropdown-item.show .dropdown-menu,
@@ -264,7 +269,8 @@
     }
 
     .bootstrap-select .show .dropdown-menu {
-        transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0s,
+        transition: all 0.3s
+                cubic-bezier(0.215, 0.61, 0.355, 1) 0s,
             opacity 0.3s ease 0s, height 0s linear 0.35s;
         transform: translate3d(0px, 0px, 0px);
     }
