--- a/src/assets/scss/paper-kit/_examples.scss
+++ b/src/assets/scss/paper-kit/_examples.scss
@@ -734,9 +734,11 @@
             }
             .dropdown-menu {
                 &:before {
-                    border-bottom: 11px solid $medium-pale-bg;
+                    border-bottom: 11px solid
+                        $medium-pale-bg;
                     border-left: 11px solid rgba(0, 0, 0, 0);
-                    border-right: 11px solid rgba(0, 0, 0, 0);
+                    border-right: 11px solid
+                        rgba(0, 0, 0, 0);
                     content: "";
                     display: inline-block;
                     position: absolute;
@@ -746,7 +748,8 @@
                 &:after {
                     border-bottom: 11px solid $pale-bg;
                     border-left: 11px solid rgba(0, 0, 0, 0);
-                    border-right: 11px solid rgba(0, 0, 0, 0);
+                    border-right: 11px solid
+                        rgba(0, 0, 0, 0);
                     content: "";
                     display: inline-block;
                     position: absolute;
