--- a/src/assets/scss/paper-kit/_misc.scss
+++ b/src/assets/scss/paper-kit/_misc.scss
@@ -3,7 +3,8 @@ body {
     color: $font-color;
     font-size: $font-size-base;
     font-weight: $font-weight-light;
-    font-family: "Montserrat", "Helvetica", Arial, sans-serif;
+    font-family: "Montserrat", "Helvetica", Arial,
+        sans-serif;
 }
 a {
     color: $info-color;
@@ -32,7 +33,8 @@ input[type="reset"]::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
 select::-moz-focus-inner,
-input[type="file"] > input[type="button"]::-moz-focus-inner {
+input[type="file"]
+    > input[type="button"]::-moz-focus-inner {
     outline: 0;
 }
 .ui-slider-handle:focus,
@@ -76,7 +78,8 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 
 .iframe-container iframe {
     box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56),
-        0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+        0 4px 25px 0 rgba(0, 0, 0, 0.12),
+        0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
 /*       CT colors          */
@@ -120,8 +123,10 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 }
 
 .wrapper {
-    -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    -webkit-transition: all 0.5s
+        cubic-bezier(0.685, 0.0473, 0.346, 1);
+    transition: all 0.5s
+        cubic-bezier(0.685, 0.0473, 0.346, 1);
     left: 0;
     background-color: $white-color;
     position: relative;
