--- a/src/assets/scss/paper-kit/_responsive.scss
+++ b/src/assets/scss/paper-kit/_responsive.scss
@@ -40,7 +40,10 @@
     .navbar .container {
         left: 0;
         width: 100%;
-        @include transition(0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+        @include transition(
+            0.33s,
+            cubic-bezier(0.685, 0.0473, 0.346, 1)
+        );
         position: relative;
     }
     .navbar .navbar-nav .dropdown-menu {
@@ -462,7 +465,10 @@
         padding-top: 15px;
 
         @include transform-translate-x(230px);
-        @include transition(0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+        @include transition(
+            0.33s,
+            cubic-bezier(0.685, 0.0473, 0.346, 1)
+        );
         ul {
             position: relative;
             z-index: 3;
@@ -582,7 +588,10 @@
         -ms-flex-align: center;
         align-items: center;
         @include transform-translate-x(0);
-        @include transition(0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+        @include transition(
+            0.33s,
+            cubic-bezier(0.685, 0.0473, 0.346, 1)
+        );
     }
 
     #bodyClick {
@@ -600,7 +609,10 @@
 
     .wrapper {
         //    @include transform-translate-x(0px);
-        @include transition(0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+        @include transition(
+            0.33s,
+            cubic-bezier(0.685, 0.0473, 0.346, 1)
+        );
         left: 0;
         background-color: white;
     }
@@ -672,7 +684,10 @@
             padding-left: 40px;
             padding-top: 15px;
             @include transform-translate-x(230px);
-            @include transition(0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+            @include transition(
+                0.33s,
+                cubic-bezier(0.685, 0.0473, 0.346, 1)
+            );
 
             .navbar-nav .nav-item {
                 &:last-child {
@@ -728,12 +743,18 @@
             width: 100%;
             position: relative;
             @include transform-translate-x(0);
-            @include transition(0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+            @include transition(
+                0.33s,
+                cubic-bezier(0.685, 0.0473, 0.346, 1)
+            );
         }
 
         .wrapper {
             //    @include transform-translate-x(0px);
-            @include transition(0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+            @include transition(
+                0.33s,
+                cubic-bezier(0.685, 0.0473, 0.346, 1)
+            );
             left: 0;
             background-color: white;
         }
