--- a/src/assets/scss/paper-kit/_sidebar.scss
+++ b/src/assets/scss/paper-kit/_sidebar.scss
@@ -30,7 +30,10 @@ body > .navbar-collapse {
     padding-top: 15px;
 
     @include transform-translate-x(300px);
-    @include transition(0.5s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+    @include transition(
+        0.5s,
+        cubic-bezier(0.685, 0.0473, 0.346, 1)
+    );
 
     ul {
         position: relative;
@@ -139,7 +142,10 @@ body > .navbar-collapse.collapse {
 }
 
 .wrapper {
-    @include transition(0.5s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+    @include transition(
+        0.5s,
+        cubic-bezier(0.685, 0.0473, 0.346, 1)
+    );
     left: 0;
     background-color: white;
     position: relative;
@@ -163,7 +169,10 @@ body > .navbar-collapse.collapse {
     }
 
     .container {
-        @include transition(0.5s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+        @include transition(
+            0.5s,
+            cubic-bezier(0.685, 0.0473, 0.346, 1)
+        );
         position: relative;
     }
     .navbar-header .navbar-toggle {
