--- a/src/assets/scss/paper-kit/_tables.scss
+++ b/src/assets/scss/paper-kit/_tables.scss
@@ -133,7 +133,8 @@
 
 // quatity buttons
 
-.btn-group .btn:first-child:not(:last-child):not(.dropdown-toggle) {
+.btn-group
+    .btn:first-child:not(:last-child):not(.dropdown-toggle) {
     color: $default-color;
 
     &:hover {
