--- a/src/assets/scss/paper-kit/_tags.scss
+++ b/src/assets/scss/paper-kit/_tags.scss
@@ -97,11 +97,13 @@
                 content: "\f00d";
                 padding: 0px 4px;
                 font-size: 18px;
-                font: normal normal normal 10px/1 FontAwesome;
+                font: normal normal normal 10px/1
+                    FontAwesome;
             }
             &:hover {
                 &:active {
-                    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+                    box-shadow: inset 0 3px 5px
+                        rgba(0, 0, 0, 0.125);
                     opacity: 1;
                 }
             }
