--- a/src/assets/scss/paper-kit/_tooltips-and-popovers.scss
+++ b/src/assets/scss/paper-kit/_tooltips-and-popovers.scss
@@ -150,7 +150,8 @@
     margin: 0;
     color: #66615b;
     text-align: center;
-    border-radius: $border-radius-base $border-radius-base 0 0;
+    border-radius: $border-radius-base $border-radius-base 0
+        0;
     margin-bottom: -10px;
 }
 .popover-header {
@@ -181,7 +182,8 @@
     @include opacity(0);
     visibility: hidden;
 
-    transition: visibility 0s linear 0.3s, opacity 0.3s linear;
+    transition: visibility 0s linear 0.3s,
+        opacity 0.3s linear;
 }
 .popover-filter.in {
     visibility: visible;
