--- a/src/assets/scss/paper-kit/cards/_card-profile.scss
+++ b/src/assets/scss/paper-kit/cards/_card-profile.scss
@@ -6,7 +6,8 @@
         height: 130px;
         background-position: center center;
         background-size: cover;
-        border-radius: $border-radius-extreme $border-radius-extreme 0 0;
+        border-radius: $border-radius-extreme
+            $border-radius-extreme 0 0;
     }
 
     .card-body {
