--- a/src/assets/scss/paper-kit/mixins/_inputs.scss
+++ b/src/assets/scss/paper-kit/mixins/_inputs.scss
@@ -1,4 +1,8 @@
-@mixin input-size($padding-vertical, $padding-horizontal, $height) {
+@mixin input-size(
+    $padding-vertical,
+    $padding-horizontal,
+    $height
+) {
     padding: $padding-vertical $padding-horizontal;
     height: $height;
 }
@@ -22,7 +26,9 @@
     @include optional-at-root(":-ms-input-placeholder") {
         @content;
     } // Internet Explorer 10+
-    @include optional-at-root("::-webkit-input-placeholder") {
+    @include optional-at-root(
+        "::-webkit-input-placeholder"
+    ) {
         @content;
     } // Safari and Chrome
 }
