--- a/src/assets/scss/paper-kit/mixins/_labels.scss
+++ b/src/assets/scss/paper-kit/mixins/_labels.scss
@@ -1,5 +1,6 @@
 @mixin label-style() {
-    padding: $padding-label-vertical $padding-label-horizontal;
+    padding: $padding-label-vertical
+        $padding-label-horizontal;
     border: 1px solid $default-color;
     border-radius: $border-radius-small;
     color: $default-color;
