--- a/src/assets/scss/paper-kit/plugins/_plugin-perfect-scrollbar.scss
+++ b/src/assets/scss/paper-kit/plugins/_plugin-perfect-scrollbar.scss
@@ -10,7 +10,8 @@
         overflow: auto !important;
     }
 }
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+@media screen and (-ms-high-contrast: active),
+    (-ms-high-contrast: none) {
     .ps-container {
         overflow: auto !important;
     }
@@ -24,7 +25,9 @@
     background-color: #eee;
     opacity: 0.9;
 }
-.ps-container.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail > .ps-scrollbar-x {
+.ps-container.ps-in-scrolling.ps-x
+    > .ps-scrollbar-x-rail
+    > .ps-scrollbar-x {
     background-color: #999;
     height: 11px;
 }
@@ -32,7 +35,9 @@
     background-color: #eee;
     opacity: 0.9;
 }
-.ps-container.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail > .ps-scrollbar-y {
+.ps-container.ps-in-scrolling.ps-y
+    > .ps-scrollbar-y-rail
+    > .ps-scrollbar-y {
     background-color: #999;
     width: 11px;
 }
@@ -41,10 +46,14 @@
     position: absolute;
     /* please don't change 'position' */
     opacity: 0;
-    -webkit-transition: background-color 0.2s linear, opacity 0.2s linear;
-    -o-transition: background-color 0.2s linear, opacity 0.2s linear;
-    -moz-transition: background-color 0.2s linear, opacity 0.2s linear;
-    transition: background-color 0.2s linear, opacity 0.2s linear;
+    -webkit-transition: background-color 0.2s linear,
+        opacity 0.2s linear;
+    -o-transition: background-color 0.2s linear,
+        opacity 0.2s linear;
+    -moz-transition: background-color 0.2s linear,
+        opacity 0.2s linear;
+    transition: background-color 0.2s linear,
+        opacity 0.2s linear;
     bottom: 0px;
     /* there must be 'bottom' for ps-scrollbar-x-rail */
     height: 15px;
@@ -56,27 +65,37 @@
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
-    -webkit-transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, -webkit-border-radius 0.2s ease-in-out;
-    transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, -webkit-border-radius 0.2s ease-in-out;
-    -o-transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
-    -moz-transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, border-radius 0.2s ease-in-out,
+    -webkit-transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        -webkit-border-radius 0.2s ease-in-out;
+    transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        -webkit-border-radius 0.2s ease-in-out;
+    -o-transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out;
+    -moz-transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out,
         -moz-border-radius 0.2s ease-in-out;
-    transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
-    transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, border-radius 0.2s ease-in-out,
+    transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out;
+    transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out,
         -webkit-border-radius 0.2s ease-in-out,
         -moz-border-radius 0.2s ease-in-out;
     bottom: 2px;
     /* there must be 'bottom' for ps-scrollbar-x */
     height: 6px;
 }
-.ps-container > .ps-scrollbar-x-rail:hover > .ps-scrollbar-x,
-.ps-container > .ps-scrollbar-x-rail:active > .ps-scrollbar-x {
+.ps-container
+    > .ps-scrollbar-x-rail:hover
+    > .ps-scrollbar-x,
+.ps-container
+    > .ps-scrollbar-x-rail:active
+    > .ps-scrollbar-x {
     height: 11px;
 }
 .ps-container > .ps-scrollbar-y-rail {
@@ -84,10 +103,14 @@
     position: absolute;
     /* please don't change 'position' */
     opacity: 0;
-    -webkit-transition: background-color 0.2s linear, opacity 0.2s linear;
-    -o-transition: background-color 0.2s linear, opacity 0.2s linear;
-    -moz-transition: background-color 0.2s linear, opacity 0.2s linear;
-    transition: background-color 0.2s linear, opacity 0.2s linear;
+    -webkit-transition: background-color 0.2s linear,
+        opacity 0.2s linear;
+    -o-transition: background-color 0.2s linear,
+        opacity 0.2s linear;
+    -moz-transition: background-color 0.2s linear,
+        opacity 0.2s linear;
+    transition: background-color 0.2s linear,
+        opacity 0.2s linear;
     right: 0;
     /* there must be 'right' for ps-scrollbar-y-rail */
     width: 15px;
@@ -99,30 +122,41 @@
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
-    -webkit-transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, -webkit-border-radius 0.2s ease-in-out;
-    transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, -webkit-border-radius 0.2s ease-in-out;
-    -o-transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
-    -moz-transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, border-radius 0.2s ease-in-out,
+    -webkit-transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        -webkit-border-radius 0.2s ease-in-out;
+    transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        -webkit-border-radius 0.2s ease-in-out;
+    -o-transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out;
+    -moz-transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out,
         -moz-border-radius 0.2s ease-in-out;
-    transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
-    transition: background-color 0.2s linear, height 0.2s linear,
-        width 0.2s ease-in-out, border-radius 0.2s ease-in-out,
+    transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out;
+    transition: background-color 0.2s linear,
+        height 0.2s linear, width 0.2s ease-in-out,
+        border-radius 0.2s ease-in-out,
         -webkit-border-radius 0.2s ease-in-out,
         -moz-border-radius 0.2s ease-in-out;
     right: 2px;
     /* there must be 'right' for ps-scrollbar-y */
     width: 6px;
 }
-.ps-container > .ps-scrollbar-y-rail:hover > .ps-scrollbar-y,
-.ps-container > .ps-scrollbar-y-rail:active > .ps-scrollbar-y {
+.ps-container
+    > .ps-scrollbar-y-rail:hover
+    > .ps-scrollbar-y,
+.ps-container
+    > .ps-scrollbar-y-rail:active
+    > .ps-scrollbar-y {
     width: 11px;
 }
-.ps-container:hover.ps-in-scrolling.ps-x > .ps-scrollbar-x-rail {
+.ps-container:hover.ps-in-scrolling.ps-x
+    > .ps-scrollbar-x-rail {
     background-color: #eee;
     opacity: 0.9;
 }
@@ -132,7 +166,8 @@
     background-color: #999;
     height: 11px;
 }
-.ps-container:hover.ps-in-scrolling.ps-y > .ps-scrollbar-y-rail {
+.ps-container:hover.ps-in-scrolling.ps-y
+    > .ps-scrollbar-y-rail {
     background-color: #eee;
     opacity: 0.9;
 }
@@ -150,13 +185,17 @@
     background-color: #eee;
     opacity: 0.9;
 }
-.ps-container:hover > .ps-scrollbar-x-rail:hover > .ps-scrollbar-x {
+.ps-container:hover
+    > .ps-scrollbar-x-rail:hover
+    > .ps-scrollbar-x {
     background-color: #999;
 }
 .ps-container:hover > .ps-scrollbar-y-rail:hover {
     background-color: #eee;
     opacity: 0.9;
 }
-.ps-container:hover > .ps-scrollbar-y-rail:hover > .ps-scrollbar-y {
+.ps-container:hover
+    > .ps-scrollbar-y-rail:hover
+    > .ps-scrollbar-y {
     background-color: #999;
 }
