--- a/src/assets/scss/paper-kit/plugins/photo-swipe/_default-skin.scss
+++ b/src/assets/scss/paper-kit/plugins/photo-swipe/_default-skin.scss
@@ -42,7 +42,8 @@
 .pswp__button,
 .pswp__button--arrow--left:before,
 .pswp__button--arrow--right:before {
-    background: url(#{$pswp__assets-path}default-skin.png) 0 0 no-repeat;
+    background: url(#{$pswp__assets-path}default-skin.png) 0
+        0 no-repeat;
     background-size: 264px 88px;
     width: 44px;
     height: 44px;
@@ -333,14 +334,20 @@ a.pswp__share--download:hover {
     opacity: 1;
 }
 
-.pswp--css_animation .pswp__preloader--active .pswp__preloader__icn {
+.pswp--css_animation
+    .pswp__preloader--active
+    .pswp__preloader__icn {
     -webkit-animation: clockwise 0.5s linear infinite;
     animation: clockwise 0.5s linear infinite;
 }
 
-.pswp--css_animation .pswp__preloader--active .pswp__preloader__donut {
-    -webkit-animation: donut-rotate 1s cubic-bezier(0.4, 0, 0.22, 1) infinite;
-    animation: donut-rotate 1s cubic-bezier(0.4, 0, 0.22, 1) infinite;
+.pswp--css_animation
+    .pswp__preloader--active
+    .pswp__preloader__donut {
+    -webkit-animation: donut-rotate 1s
+        cubic-bezier(0.4, 0, 0.22, 1) infinite;
+    animation: donut-rotate 1s cubic-bezier(0.4, 0, 0.22, 1)
+        infinite;
 }
 
 .pswp--css_animation .pswp__preloader__icn {
@@ -460,7 +467,8 @@ a.pswp__share--download:hover {
 .pswp__top-bar {
     -webkit-backface-visibility: hidden;
     will-change: opacity;
-    -webkit-transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
+    -webkit-transition: opacity 333ms
+        cubic-bezier(0.4, 0, 0.22, 1);
     transition: opacity 333ms cubic-bezier(0.4, 0, 0.22, 1);
 }
 
