--- a/src/assets/scss/paper-kit/plugins/photo-swipe/_main.scss
+++ b/src/assets/scss/paper-kit/plugins/photo-swipe/_main.scss
@@ -126,7 +126,8 @@
     -ms-transform-origin: left top;
     transform-origin: left top;
     /* for open/close transition */
-    transition: transform $pswp__show-hide-transition-duration
+    transition: transform
+        $pswp__show-hide-transition-duration
         cubic-bezier(0.4, 0, 0.22, 1);
 }
 
