--- a/src/assets/scss/react/paper-kit/_navbar-extend.scss
+++ b/src/assets/scss/react/paper-kit/_navbar-extend.scss
@@ -1,4 +1,5 @@
-.navbar-default:not(.navbar-transparent) .btn-default.dropdown-toggle:hover {
+.navbar-default:not(.navbar-transparent)
+    .btn-default.dropdown-toggle:hover {
     background-color: $default-color;
     color: $transparent-bg;
     border-color: $default-color;
